# sopra_demo

./: .gitignore  annotation.py  clustering.py  empty_spaces.py  gui.py  image_utils.py  import_data.py  main.py  pyproject.toml  read_yolo_output.py  sandbed.py  sopra_test.ipynb  vaggleteller.py  video_reader.py  visualizer.py
data/annotation/xml/: img1.xml
yolo/: annotation.py  detection.py
yolo/runs/detect/exp/labels/: 1001_jpg.rf.5746260f252219fdb0f254e167edacc2.txt  1801_jpg.rf.c29efffa83f033468689c7cc0b254d07.txt  3401_jpg.rf.c40a8024d1cb96ff0b3d8b2f3719680f.txt
yolo/test/labels/: 1001_jpg.rf.5746260f252219fdb0f254e167edacc2.txt  1801_jpg.rf.c29efffa83f033468689c7cc0b254d07.txt  3401_jpg.rf.c40a8024d1cb96ff0b3d8b2f3719680f.txt
