[tool.poetry]
name = "norsk_kylling"
version = "0.1.0"
description = ""
authors = ["Oskar <oveggeland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.2"
opencv-python = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
