[tool.poetry]
name = "norsk_kylling"
version = "0.1.0"
description = ""
authors = ["Oskar <oveggeland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.2"
opencv-python = "^4.5.2"
torchvision = "^0.10.0"
numpy = "^1.21.0"
Pillow = "^8.2.0"
PyYAML = "^5.4.1"
tensorboard = "^2.5.0"
thop = "^0.0.31"
pandas = "^1.2.5"
seaborn = "^0.11.1"
tqdm = "^4.61.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
